fix alignment issue

--- a/website/src/components/SiteGrid/SiteGrid.css
+++ b/website/src/components/SiteGrid/SiteGrid.css
@@ -1,11 +1,16 @@
 
 .site-grid {
     display : grid; 
-    grid-template-columns: 10% auto;
-    grid-template-rows: auto auto;
+    min-width  : 100%; 
+    min-height : 100%;
+    padding    : 10px;
+    gap: 10px 10px;
+    grid-template-columns: 12vw auto;
+    grid-template-rows: 12vh auto;
     grid-template-areas: 
         "header header"
         "sidebar main";
+
 }
 
 .site-grid-header {
